tests/baselines/reference/computedPropertyNamesDeclarationEmit4_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNamesDeclarationEmit4_ES5.ts(2,5): error TS1170: Computed property names are not allowed in type literals.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNamesDeclarationEmit4_ES5.ts (1 errors) ====
    var v: {
        ["" + ""](): void;
        ~~~~~~~~~
!!! error TS1170: Computed property names are not allowed in type literals.
    }